# ai_governance

./: .gitignore
copilot_governance/: package-lock.json  package.json
copilot_governance/src/: App.jsx  main.jsx
copilot_governance/src/components/: Navbar.jsx
copilot_governance/src/components/Agent/: AgentChat.jsx
copilot_governance/src/pages/: Home.jsx
copilot_governance/src/pages/authenticated/: Hub.jsx
copilot_governance/src/pages/authenticated/agent_management/: AgentManagementAgent.jsx  AgentManagementHub.jsx
copilot_governance/src/pages/authenticated/agent_management/forms/: AgentAddKnowledgeSourceForm.jsx  AgentCreationForm.jsx
copilot_governance/src/pages/authenticated/cost_management/: CostManagementAgent.jsx  CostManagementHub.jsx
copilot_governance_backend/copilot_governance_backend/: README.md  backend.py  models.py  provision_database.py  pyproject.toml  schemas.py  test.py
